java 8 compatibility + build path clean up